[tool.poetry]
name = "async-responses"
version = "1.0.0"
description = "aiohttp testing library"
authors = ["Sławomir Górawski <slawomir@ulam.io>", "Maciej Janiszewski <maciej@ulam.io>"]
license = "MIT"
readme = "README.md"
homepage = "https://ulam.io/"
repository = "https://github.com/ulamlabs/async-responses"
documentation = "https://async-responses.readthedocs.io/en/latest/"
keywords = ["aiohttp", "testing"]

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = ">=3.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.4.1"
sphinx = "^2.4.4"
sphinx_rtd_theme = "^0.4.3"
pytest-cov = "^2.8.1"
mypy = "^0.770"
pytest-aiohttp = "^0.3.0"
sphinx-autodoc-typehints = "^1.10.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
